--- a/html.html
+++ b/html.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html</title>
+    <style>
+        li{
+            
+            font-size: 20px;
+        }
+        h1{
+            border-bottom: rgb(255, 0, 0) 5px solid;
+            padding-bottom: 0px;
+            margin-bottom: 0px;
+        }
+        ol{
+            border-right: red 5px dotted;
+            margin-top: 0px;
+        }
+        #contain
+        {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+        article h4{
+            padding-left:10px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Web</h1></a>
+        <h1><a href="index.html">Web</a></h1>
     </header>
     <article>
-        <h1>html</h1>
+        <div id="contain">
+            <ol>
+                <li><a href="html.html">html</a></li>
+                <li><a href="css.html">css</a></li>
+                <li><a href="javascript.html">javascript</a></li>
+            </ol>
+        <h4>html</h4>
+        </div>
         html is .................
     </article>
     <footer>
